<resources>
    <!-- APP -->
    <string name="app_name">AndroidTFG</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="mainLoading">Loading... Please, wait</string>
    <string name="undo">UNDO</string>

    <!-- VIEW MODELS -->
    <string name="moreViewModel">more</string>
    <string name="mainViewModel">main</string>

    <!-- PREFERENCES -->
    <string name="favoritesPreferences">fav</string>

    <!-- OPTIONS -->
    <string name="optLogout">Logout</string>

    <!-- MAIN -->
    <string name="nav_home">Home</string>
    <string name="nav_fav">Favorites</string>
    <string name="nav_search">Search</string>
    <string name="nav_map">Map</string>
    <string name="nav_config">Settings</string>
    <string name="menuGroupGeneral">General</string>
    <string name="menuGroupAdmin">Admin</string>
    <string name="welcomeMessage">Welcome !</string>

    <!-- HOME -->
    <string name="homeValuesFormat">%.2f %s</string>

    <!-- SEARCH -->
    <string name="searchHint">Search...</string>
    <string name="itemMoreButton">MORE</string>
    <string name="locationFormat">%s (%s)</string>

    <!-- MORE -->
    <string name="tempTitle">Temperature</string>
    <string name="tempTitleShort">Temp</string>
    <string name="humTitle">Humidity</string>
    <string name="humTitleShort">Hum</string>
    <string name="presTitle">Pressure</string>
    <string name="presTitleShort">Pres</string>
    <string name="uvTitle">UV</string>
    <string name="favoriteEvent">Favorite</string>
    <string name="remove_from_favorites">Removed from favorites</string>
    <string name="add_to_favorites">Added to favorites</string>
    <string name="moreNoData">No data.</string>
    <string name="titleDateRange">Select data range</string>

    <!-- MAP -->
    <string name="markerTitleFormat">%s\n[%s]</string>
    <string name="markerSnippetFormat">%.2f %s\t%.2f %s\t%.2f %s\t%.2f %s</string>

    <!-- FAVORITES -->
    <string name="no_fav_text">Empty favorites list.</string>
    <string name="remove_fav">Remove favorites</string>

    <!-- SETTINGS -->
    <string name="setUnitTitle">Measurement units</string>
    <string name="sumTemp">Set the units for temperature</string>
    <string name="sumPres">Set the units for pressure</string>
    <string name="sumUV">Set the units for UV</string>
    <string name="keyUnitTemp">units_temp</string>
    <string name="defUnitTemp">ºC</string>
    <string name="KUnitTemp">ºF</string>
    <string name="defUnitHum">%</string>
    <string name="keyUnitPres">units_pres</string>
    <string name="defUnitPres">hPa</string>
    <string name="ATMUnitPres">atm</string>
    <string name="keyUnitUV">units_uv</string>
    <string name="defUnitUV">mW/cm2</string>
    <string name="WM2UnitUV">W/m2</string>
    <string name="setLocTitle">Location</string>
    <string name="setLangTitle">Language</string>
    <string name="sumLang">Change the language</string>
    <string name="keyLang">lang</string>
    <string name="enLang">English</string>
    <string name="esLang">Español</string>
    <string name="adminTitle">Administration</string>
    <string name="adminTitle2">Go to admin area</string>
    <string name="keyAdmin">admin</string>
    <string name="sumAdmin">Administration tasks</string>
    <string name="keyAlert">alert</string>
    <string name="alertTitle">Send device alerts</string>
    <string name="sumAlert">Enable or disable alert messages</string>
    <string name="keyConfigAlert">configAlert</string>
    <string name="configAlertTitle">Alert management</string>
    <string name="sumConfigAlert">Edit or remove alerts</string>
    <string name="keyUserAlerts">user_alerts</string>

    <!-- LOGIN -->
    <string name="adminLoginTitle">Login</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintPasswd">Password</string>
    <string name="btnLogin">Login</string>
    <string name="lostPasswd">Password lost?</string>
    <string name="resetPasswordSentTitle">Done</string>
    <string name="resetPasswordSent">An email has been sent to reset your password.</string>
    <string name="resetPasswordSentOK">OK</string>
    <string name="btnLogout">Logout</string>
    <string name="txtLogin">You are already logged in as an administrator!</string>
    
    <!-- EDIT NAME ADMIN -->
    <string name="editNameTitle">Edit name</string>
    <string name="editNameCancel">Cancel</string>
    <string name="editNameOK">OK</string>
    <string name="editNameEmpty">Name is empty !</string>
    <string name="editNameChangedTitle">Name changed</string>
    <string name="editNameChanged">Device name has been changed successfully.</string>

    <!-- UPDATE SETTINGS ADMIN -->
    <string name="editDeviceConfigTitle">Update settings</string>
    <string name="sleepTimeTitle">Sleep time</string>
    <string name="sleepTimeUnits">min</string>
    <string name="editDeviceConfigUpdate">Update</string>
    <string name="editDeviceConfigCancel">Cancel</string>
    <string name="sleepTimeDefaultText">11 min</string>
    <string name="editDeviceConfigChangedTitle">Settings updated</string>
    <string name="editDeviceConfigChanged">All device settings have been updated and they will be applied at the next device update event.</string>
    <string name="editDeviceConfigOK">OK</string>
    <string name="downlinkFreqTitle">Downlink freq.</string>
    <string name="downlinkFreqDefaultText">2 messages</string>
    <string name="downlinkFreqUnits">messages</string>

    <!-- ALERT -->
    <string name="alertNoData">Empty alert list.</string>
    <string name="remove_from_alerts">Alert has been removed</string>
    <string name="alertContentFormat">%.2f %s\n</string>
    <string name="alertChannelName">Alerts</string>
    <string name="alertChannelDescription">Notifies when devices triggers an alert</string>
    <string name="alertNotificationTitle">Device has exceeded user defined range</string>

    <!-- ADD ALERT -->
    <string name="maxHint">Max.</string>
    <string name="minHint">Min</string>
    <string name="createButton">Create</string>
    <string name="updateButton">Update</string>
    <string name="removeDialogTitle">Empty fields</string>
    <string name="removeDialog">You are overwriting an alert with empty values. Do you want to remove it?</string>
    <string name="removeDialogPositive">Remove</string>
    <string name="removeDialogNegative">Cancel</string>
    <string name="createEmptyDialogTitle">Empty fields</string>
    <string name="createEmptyDialog">At least one field must be specified</string>
    <string name="addAlertSuccessTitle">Success</string>
    <string name="addAlertSuccess">Alert has been created</string>
    <string name="addAlertSuccessUpdateTitle">Updated</string>
    <string name="addAlertSuccessUpdate">Alert has been updated</string>
    <string name="addAlertOK">OK</string>


    <!-- ERRORES -->
    <string name="errorDateRangeTitle">Date out of range</string>
    <string name="errorDateRange">Date range must be until today !</string>
    <string name="errorNoLocationGrantedTitle">PERMISSION NOT GRANTED</string>
    <string name="errorNoLocationGranted">Location is needed to display home screen !</string>
    <string name="errorLoginValuesInvalidTitle">Invalid e-mail or password</string>
    <string name="errorLoginValuesInvalid">E-mail and password must not be empty and e-mail must be valid.</string>
    <string name="errorLoginValuesInvalidOK">OK</string>
    <string name="errorResetPasswordTitle">Invalid e-mail</string>
    <string name="errorResetPassword">E-mail must not be empty or invalid !</string>
    <string name="errorResetPasswordOK">OK</string>
    <string name="errorEditNameSame">Device has already this name</string>
    <string name="errorEditNameFailTitle">Name error</string>
    <string name="errorEditNameFail">An error occurred when editing device name.</string>
    <string name="errorEditDeviceConfigTitle">Update failed</string>
    <string name="errorEditDeviceConfig">Device settings cannot be updated. Please, try again later.</string>
    <string name="errorAddAlertInvalidRange">Invalid range</string>
    <string name="errorAddAlertInvalidNumber">Invalid number, must be greater than zero</string>

</resources>
