<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_location_24dp"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/nav_fav" />
    <item
        android:id="@+id/nav_config"
        android:icon="@drawable/ic_config_24dp"
        android:title="@string/nav_config" />
</menu>