<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/darkColorDivider"
        app:layout_constraintEnd_toEndOf="@+id/sleepTimeTitle"
        app:layout_constraintStart_toStartOf="@+id/sleepTimeTitle"
        app:layout_constraintTop_toBottomOf="@+id/sleepTime" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/darkColorDivider"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/editDeviceConfigCancel"
        android:textColor="@color/colorError"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="@+id/sleepTime"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <Button
        android:id="@+id/ok"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/editDeviceConfigUpdate"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/sleepTime"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/divider2" />

    <TextView
        android:id="@+id/sleepTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sleepTimeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sleepTime"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:max="60"
        android:progress="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepTimeTitle" />

    <TextView
        android:id="@+id/sleepTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="15 min"
        app:layout_constraintBottom_toTopOf="@+id/sleepTime"
        app:layout_constraintEnd_toEndOf="@+id/sleepTime" />

</androidx.constraintlayout.widget.ConstraintLayout>